2004-03-09  Ilja Booij  <ilja@ic-s.nl>

	* sort/sort.c (sort_and_deliver): uses db_message_set_unique_id()
	to set the unique id of a message.

	* db.c (db_copymsg): does not compute the new quotum on a copy, but
	only adds the messagesize to the used quotum, which saves looking
	at all messagesize on every copy.
	(db_add_quotum_used): new functions: add a value to the current
	curmail_size of a user.
	(db_imap_append_msg): uses db_add_quotum_used instead of doing
	a complete recalculation of the used quotum.
	(db_update_message):  uses db_add_quotum_used instead of doing
	a complete recalculation of the used quotum.
	(db_message_set_unique_id): new function that only updates the
	unique id of a message.
	(db_update_message): uses db_message_set_unique_id()

	* forward.c (forward): only send header through pipe if there's no
	message to send. Otherwise get the whole message from the database.
	(forward): added __FILE__ and __FUNCTION__ to all trace() calls.

	* rfcmsg.c (db_reverse_msg): changed function calls from list_reverse()
	to dbmail_list_reverse()

	* lmtp.c (lmtp): changed function call from list_reverse() to
	dbmail_list_reverse()

	* imapcommands.c (_ic_fetch): changed function call from list_reverse()
	to dbmail_list_reverse()

	* list.c (dbmail_list_reverse): renamed function from list_reverse()
	to dbmail_list_reverse()

	* list.h: renamed list_reverse() to dbmail_list_reverse() to 
	fix conflict with function exported by some MySQL versions.

2004-03-08  Aaron Stone <aaron@serendipity.cx>

	* lmtp.c: improved compliance with RFC 2033, LMTP, in two key areas:
	proper replies to the DATA command and removal of failed recipients
	from the recipients list, to prevent reporting their failures twice.
	* lmtp.c: allow for zero length envelope senders, which is common
	practice for MTA's sending bounces and other error messages.
	* misc.c (find_bounded): a zero length bounded string is now returned